# pulse-ai

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
programs/pulse_ai_protocol/: Cargo.toml
programs/pulse_ai_protocol/src/: lib.rs
src/: App.jsx  config.js  index.css  main.jsx
src/components/: AIInsights.jsx  BridgePanel.jsx  Dashboard.jsx  Header.jsx  Positions.jsx  PulseLandingPage.jsx  PulseLogo.jsx  RiskGauge.jsx  SwapPanel.jsx  TokenDetail.jsx  TokenDiscovery.jsx  WalletProvider.jsx
src/hooks/: useAIAnalysis.js  useAnalysisHistory.js  useElevenLabs.js  usePulseProtocol.js  useSolPrice.js  useTokenDiscovery.js  useWalletPortfolio.js
src/lib/: anchorClient.js  auth-context.jsx  commitmentSchema.js  pulseProtocol.js  supabase.js  useSupabase.js
src/lib/idl/: pulse_ai_protocol.json
src/services/: elevenLabsService.js  riskEngine.js  swapService.js
supabase/functions/analyze-token/: index.ts
tests/: protocol.integration.test.mjs
web/: build_output.txt  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.module.css  page.tsx  providers.tsx
web/app/context/: ToastContext.tsx  (+1 more)
web/hooks/: use-countdown.ts  use-fixed-deposit.ts  use-fixed-positions.ts  use-fixed-withdraw.ts  use-flexible-deposit.ts  use-flexible-vault.ts  use-flexible-withdraw.ts  use-history.ts  use-ngn-rate.ts  use-p2p-send.ts  use-usdc-balance.ts
web/lib/: constants.ts  contracts.ts  errors.ts  format.ts
web/types/: global.d.ts  index.ts
(+33 files in other folders)
